integration-tests/backend/testdata/ota/cvo/cfg-ocp-84029/server.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: networkpolicy-netcat-server
  namespace: openshift-cluster-version
  labels:
    app: networkpolicy-test
spec:
  restartPolicy: Never
  containers:
  - name: http-server
    image: python:3.12-alpine
    command: ["python3", "-m", "http.server", "8080"]
---
apiVersion: v1
kind: Service
metadata:
  name: networkpolicy-netcat-service
  namespace: openshift-cluster-version
spec:
  selector:
    app: networkpolicy-test
  ports:
  - port: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: networkpolicy-netcat-route
  namespace: openshift-cluster-version
spec:
  to:
    kind: Service
    name: networkpolicy-netcat-service
